// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/Skills/SidebarSkills should have no editable permission if can_upload is false 1`] = `
<SidebarSkills
  cards={
    [
      {
        "entries": [
          {
            "title": "bar",
          },
        ],
      },
    ]
  }
  errors={{}}
  file={
    {
      "permissions": {
        "can_upload": false,
      },
    }
  }
  getViewer={[MockFunction]}
>
  <sidebar-section
    interactionTarget=""
    isOpen={true}
    key="card_9"
    title={
      <FormattedMessage
        defaultMessage="Skill Card"
        id="be.defaultSkill"
      />
    }
  >
    <sidebar-skills-card
      card={
        {
          "entries": [
            {
              "title": "bar",
            },
          ],
        }
      }
      cards={
        [
          {
            "entries": [
              {
                "title": "bar",
              },
            ],
          },
        ]
      }
      getViewer={[MockFunction]}
      hasError={false}
      isEditable={false}
      onSkillChange={[Function]}
    />
  </sidebar-section>
</SidebarSkills>
`;

exports[`elements/content-sidebar/Skills/SidebarSkills should render only the valid cards 1`] = `
<SidebarSkills
  cards={
    [
      {},
      {
        "entries": [
          {
            "title": "bar",
          },
        ],
      },
    ]
  }
  errors={
    {
      "1": true,
    }
  }
  file={
    {
      "permissions": {
        "can_upload": true,
      },
    }
  }
  getViewer={[MockFunction]}
>
  <sidebar-section
    interactionTarget=""
    isOpen={true}
    key="card_8"
    title={
      <FormattedMessage
        defaultMessage="Skill Card"
        id="be.defaultSkill"
      />
    }
  >
    <sidebar-skills-card
      card={
        {
          "entries": [
            {
              "title": "bar",
            },
          ],
        }
      }
      cards={
        [
          {},
          {
            "entries": [
              {
                "title": "bar",
              },
            ],
          },
        ]
      }
      getViewer={[MockFunction]}
      hasError={true}
      isEditable={true}
      onSkillChange={[Function]}
    />
  </sidebar-section>
</SidebarSkills>
`;

exports[`elements/content-sidebar/Skills/SidebarSkills should render the cards when there are valid skills 1`] = `
<SidebarSkills
  cards={
    [
      {
        "entries": [
          {},
        ],
        "skill_card_title": {
          "code": "skills_faces",
        },
      },
      {
        "entries": [],
        "skill_card_title": {
          "code": "skills_transcript",
        },
      },
      {
        "entries": [],
        "skill_card_title": {
          "code": "skills_topics",
        },
      },
      {
        "entries": [
          {},
        ],
        "skill_card_title": {
          "code": "skills_status",
        },
      },
      {
        "entries": [],
        "skill_card_title": {
          "code": "skills_error",
        },
      },
      {
        "entries": [
          {},
        ],
        "skill_card_title": {
          "message": "title",
        },
      },
    ]
  }
  errors={
    {
      "3": true,
      "5": true,
    }
  }
  file={
    {
      "permissions": {
        "can_upload": true,
      },
    }
  }
  getViewer={[MockFunction]}
>
  <sidebar-section
    interactionTarget=""
    isOpen={true}
    key="card_1"
    title={
      <FormattedMessage
        defaultMessage="Faces"
        id="be.faceSkill"
      />
    }
  >
    <sidebar-skills-card
      card={
        {
          "entries": [
            {},
          ],
          "skill_card_title": {
            "code": "skills_faces",
          },
        }
      }
      cards={
        [
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "code": "skills_faces",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_transcript",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_topics",
            },
          },
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "code": "skills_status",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_error",
            },
          },
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "message": "title",
            },
          },
        ]
      }
      getViewer={[MockFunction]}
      hasError={false}
      isEditable={true}
      onSkillChange={[Function]}
    />
  </sidebar-section>
  <sidebar-section
    interactionTarget=""
    isOpen={false}
    key="card_2"
    title={
      <FormattedMessage
        defaultMessage="Transcript"
        id="be.transcriptSkill"
      />
    }
  >
    <sidebar-skills-card
      card={
        {
          "entries": [],
          "skill_card_title": {
            "code": "skills_transcript",
          },
        }
      }
      cards={
        [
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "code": "skills_faces",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_transcript",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_topics",
            },
          },
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "code": "skills_status",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_error",
            },
          },
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "message": "title",
            },
          },
        ]
      }
      getViewer={[MockFunction]}
      hasError={false}
      isEditable={true}
      onSkillChange={[Function]}
    />
  </sidebar-section>
  <sidebar-section
    interactionTarget=""
    isOpen={false}
    key="card_3"
    title={
      <FormattedMessage
        defaultMessage="Topics"
        id="be.topicsSkill"
      />
    }
  >
    <sidebar-skills-card
      card={
        {
          "entries": [],
          "skill_card_title": {
            "code": "skills_topics",
          },
        }
      }
      cards={
        [
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "code": "skills_faces",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_transcript",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_topics",
            },
          },
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "code": "skills_status",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_error",
            },
          },
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "message": "title",
            },
          },
        ]
      }
      getViewer={[MockFunction]}
      hasError={false}
      isEditable={true}
      onSkillChange={[Function]}
    />
  </sidebar-section>
  <sidebar-section
    interactionTarget=""
    isOpen={true}
    key="card_4"
    title={
      <FormattedMessage
        defaultMessage="Status"
        id="be.statusSkill"
      />
    }
  >
    <sidebar-skills-card
      card={
        {
          "entries": [
            {},
          ],
          "skill_card_title": {
            "code": "skills_status",
          },
        }
      }
      cards={
        [
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "code": "skills_faces",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_transcript",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_topics",
            },
          },
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "code": "skills_status",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_error",
            },
          },
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "message": "title",
            },
          },
        ]
      }
      getViewer={[MockFunction]}
      hasError={true}
      isEditable={true}
      onSkillChange={[Function]}
    />
  </sidebar-section>
  <sidebar-section
    interactionTarget=""
    isOpen={false}
    key="card_5"
    title={
      <FormattedMessage
        defaultMessage="Error"
        id="be.error"
      />
    }
  >
    <sidebar-skills-card
      card={
        {
          "entries": [],
          "skill_card_title": {
            "code": "skills_error",
          },
        }
      }
      cards={
        [
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "code": "skills_faces",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_transcript",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_topics",
            },
          },
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "code": "skills_status",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_error",
            },
          },
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "message": "title",
            },
          },
        ]
      }
      getViewer={[MockFunction]}
      hasError={false}
      isEditable={true}
      onSkillChange={[Function]}
    />
  </sidebar-section>
  <sidebar-section
    interactionTarget=""
    isOpen={true}
    key="card_6"
    title="title"
  >
    <sidebar-skills-card
      card={
        {
          "entries": [
            {},
          ],
          "skill_card_title": {
            "message": "title",
          },
        }
      }
      cards={
        [
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "code": "skills_faces",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_transcript",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_topics",
            },
          },
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "code": "skills_status",
            },
          },
          {
            "entries": [],
            "skill_card_title": {
              "code": "skills_error",
            },
          },
          {
            "entries": [
              {},
            ],
            "skill_card_title": {
              "message": "title",
            },
          },
        ]
      }
      getViewer={[MockFunction]}
      hasError={true}
      isEditable={true}
      onSkillChange={[Function]}
    />
  </sidebar-section>
</SidebarSkills>
`;
